<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">
        <TextView
            android:id="@+id/text"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            style="?android:attr/listSeparatorTextViewStyle"/>
        <EditText
            android:id="@+id/SignInMail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/mail_address"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/SignInPass"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/SignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:background="@drawable/custom_button"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/notamember"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:onClick="NavigateSignUp"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/forgetyourpassword"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/forget_your_password"
            android:onClick="NavigateForgetMyPassword"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"/>
    </TableLayout>
</android.support.constraint.ConstraintLayout>